[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
itertools = "0.10.5"
md-5 = "0.10.5"
nom = "7.1.1"
rayon = "1.6.1"
regex = "1"


[[bench]]
name = "y23d01"
path = "benches/y23/y23d01.rs"
harness = false